--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
+}
+
 .App {
   text-align: center;
+  min-height: 100%;
 }
 
 .App-logo {
@@ -36,3 +47,60 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.card-img-top {
+  max-height: 200px; /* Adjust the height as needed */
+  width: auto; /* Ensures the image adjusts its width responsively */
+  object-fit: cover;
+  object-position: center;
+}
+
+.infoImage{
+  max-height: 200px;
+}
+
+
+#hero {
+  background-color: #ddc5cd;
+  border: 3px solid lightgrey;
+  padding: 150px 150px;
+  /* margin: 10px 250px 0 250px; */
+}
+
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 1%;
+ 
+}
+
+.infoImage{
+ border-radius: 8px;
+ width: 300px;
+ height: 400px;
+ max-width: 50%;
+ max-height: 50%;
+}
+
+.infoText{
+  max-width: 350px;
+  margin: auto;
+ 
+}
+
+.infoImage, .infoText{
+display: inline-block;
+padding: 10px;
+margin-top: 100px;
+}
+
