--- a/src/App.css
+++ b/src/App.css
@@ -84,10 +84,11 @@ code {
  
 }
 
-.infoImage{
+.infoImage{ 
  border-radius: 8px;
  width: 300px;
  height: 400px;
+ object-fit: contain;
  max-width: 50%;
  max-height: 50%;
 }
@@ -95,7 +96,6 @@ code {
 .infoText{
   max-width: 350px;
   margin: auto;
- 
 }
 
 .infoImage, .infoText{
@@ -104,3 +104,14 @@ padding: 10px;
 margin-top: 100px;
 }
 
+.about_page {
+  margin: 0 350px;
+  padding: 25px 0;
+  border-bottom: solid black thin;
+  
+}
+
+.page_id{
+  padding: 15px;
+  text-transform: capitalize;
+}
